[tool.poetry]
name = "globalgather"
version = "0.1.0"
description = ""
authors = ["Arturo Filastò <arturo@filasto.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.28.2"
pycountry = "^22.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
